<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SpeedTimer</string>
    <string name="default_time">0.000</string>
    <string name="dnf">DNF</string>
    <string name="plus_2_template">(+2) %1$s</string>
    <string name="_2">+2</string>
    <string name="choose_event">Choose event</string>
    <string name="_2by2">2x2</string>
    <string name="_3by3">3x3</string>
    <string name="ok">OK</string>
    <string name="avg5">avg5:</string>
    <string name="avg12">avg12:</string>
    <string name="avg50">avg50:</string>
    <string name="avg100">avg100:</string>
    <string name="write_your_scramble">Write your scramble</string>
    <string name="your_scramble">Your scramble</string>
    <string name="pyra">Pyraminx</string>
    <string name="set_theme">Set theme</string>
    <string name="skewb">Skewb</string>
    <string name="clock">Clock</string>
    <string name="copied">Copied</string>
    <string name="oll">OLL</string>
    <string name="best">best:</string>
    <string name="delete_question">Are you sure you want to delete all results?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="count">count:</string>

    <string-array name="settings">
        <item>Set theme</item>
        <item>Delay</item>
        <item>Algorithms</item>
    </string-array>

    <string-array name="algorithms">
        <item>OLL</item>
        <item>PLL</item>
    </string-array>

    <string-array name="oll_algs">
        <item>R U2 R2 F R F\' U2 R\' F R F\'</item>
        <item>r U r\' U2 r U2 R\' U2 R U\' r\'</item>
        <item>r\' R2 U R\' U r U2 r\' U M\'</item>
        <item>M U\' r U2 r\' U\' R U\' R\' M\'</item>
        <item>l\' U2 L U L\' U l</item>
        <item>r U2 R\' U\' R U\' r\'</item>
        <item>r U R\' U R U2 r\'</item>
        <item>l\' U\' L U\' L\' U2 l</item>
        <item>R U R\' U\' R\' F R2 U R\' U\' F\'</item>
        <item>R U R\' U R\' F R F\' R U2 R\'</item>
        <item>r U R\' U R\' F R F\' R U2 r\'</item>
        <item>M\' R\' U\' R U\' R\' U2 R U\' R r\'</item>
        <item>F U R U\' R2 F\' R U R U\' R\'</item>
        <item>R\' F R U R\' F\' R F U\' F\'</item>
        <item>l\' U\' l L\' U\' L U l\' U l</item>
        <item>r U r\' R U R\' U\' r U\' r\'</item>
        <item>F R\' F\' R2 r\' U R U\' R\' U\' M\'</item>
        <item>r U R\' U R U2 r2 U\' R U\' R\' U2 r</item>
        <item>r\' R U R U R\' U\' M\' R\' F R F\'</item>
        <item>r U R\' U\' M2 U R U\' R\' U\' M\'</item>
        <item>R U2 R\' U\' R U R\' U\' R U\' R\'</item>
        <item>R U2 R2 U\' R2 U\' R2 U2 R</item>
        <item>R2 D\' R U2 R\' D R U2 R</item>
        <item>r U R\' U\' r\' F R F\'</item>
        <item>F\' r U R\' U\' r\' F R</item>
        <item>R U2 R\' U\' R U\' R\'</item>
        <item>R U R\' U R U2 R\'</item>
        <item>r U R\' U\' r\' R U R U\' R\'</item>
        <item>R U R\' U\' R U\' R\' F\' U\' F R U R\'</item>
        <item>F R\' F R2 U\' R\' U\' R U R\' F2</item>
        <item>R\' U\' F U R U\' R\' F\' R</item>
        <item>L U F\' U\' L\' U L F L\'</item>
        <item>R U R\' U\' R\' F R F\'</item>
        <item>R U R2 U\' R\' F R U R U\' F\'</item>
        <item>R U2 R2 F R F\' R U2 R\'</item>
        <item>L\' U\' L U\' L\' U L U L F\' L\' F</item>
        <item>F R\' F\' R U R U\' R\'</item>
        <item>R U R\' U R U\' R\' U\' R\' F R F\'</item>
        <item>L F\' L\' U\' L U F U\' L\'</item>
        <item>R\' F R U R\' U\' F\' U R</item>
        <item>R U R\' U R U2 R\' F R U R\' U\' F\'</item>
        <item>R\' U\' R U\' R\' U2 R F R U R\' U\' F\'</item>
        <item>F\' U\' L\' U L F</item>
        <item>F U R U\' R\' F\'</item>
        <item>F R U R\' U\' F\'</item>
        <item>R\' U\' R\' F R F\' U R</item>
        <item>R\' U\' R\' F R F\' R\' F R F\' U R</item>
        <item>F R U R\' U\' R U R\' U\' F\'</item>
        <item>r U\' r2 U r2 U r2 U\' r</item>
        <item>r\' U r2 U\' r2 U\' r2 U r\'</item>
        <item>F U R U\' R\' U R U\' R\' F\'</item>
        <item>R U R\' U R U\' B U\' B\' R\'</item>
        <item>l\' U2 L U L\' U\' L U L\' U l</item>
        <item>r U2 R\' U\' R U R\' U\' R U\' r\'</item>
        <item>R\' F R U R U\' R2 F\' R2 U\' R\' U R U R\'</item>
        <item>r\' U\' r U\' R\' U R U\' R\' U R r\' U r</item>
        <item>R U R\' U\' M\' U R U\' r\'</item>
    </string-array>

    <string-array name="pll_algs">
        <item>x L2 D2 L\' U\' L D2 L\' U L\'</item>
        <item>x\' L2 D2 L U L\' D2 L U\' L</item>
        <item>R\' U\' F\' R U R\' U\' R\' F R2 U\' R\' U\' R U R\' U R</item>
        <item>R2 U R\' U R\' U\' R U\' R2 U\' D R\' U R D\'</item>
        <item>R\' U\' R U D\' R2 U R\' U R U\' R U\' R2 D</item>
        <item>R2 U\' R U\' R U R\' U R2 U D\' R U\' R\' D</item>
        <item>R U R\' U\' D R2 U\' R U\' R\' U R\' U R2 D\'</item>
        <item>x R2 F R F\' R U2 r\' U r U2</item>
        <item>R U R\' F\' R U R\' U\' R\' F R2 U\' R\'</item>
        <item>R U\' R\' U\' R U R D R\' U\' R D\' R\' U2 R\'</item>
        <item>R2 F R U R U\' R\' F\' R U2 R\' U2 R</item>
        <item>R U R\' U\' R\' F R2 U\' R\' U\' R U R\' F\'</item>
        <item>x\' L\' U L D\' L\' U\' L D L\' U\' L D\' L\' U L D</item>
        <item>R U R\' U R U R\' F\' R U R\' U\' R\' F R2 U\' R\' U2 R U\' R\'</item>
        <item>R\' U R U\' R\' F\' U\' F R U R\' F R\' F\' R U\' R</item>
        <item>R\' U R\' U\' y R\' F\' R2 U\' R\' U R\' F R F</item>
        <item>F R U\' R\' U\' R U R\' F\' R U R\' U\' R\' F R F\'</item>
        <item>M2 U M2 U2 M2 U M2</item>
        <item>M2 U M U2 M\' U M2</item>
        <item>M2 U\' M U2 M\' U\' M2</item>
        <item>M\' U M2 U M2 U M\' U2 M2</item>
    </string-array>


</resources>