<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_write_scramble_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_your_scramble"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dialog_write_scramble_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dialog_write_scramble_text_view"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/your_scramble" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_write_scramble_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dialog_write_scramble_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/ok" />

</androidx.constraintlayout.widget.ConstraintLayout>